--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -15316,6 +15316,12 @@
         }
       }
     },
+    "Connect with Twitch" : {
+
+    },
+    "Connected" : {
+
+    },
     "Connection priorities" : {
       "localizations" : {
         "de" : {
