new swift-twitch-client version

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -29213,6 +29213,9 @@
         }
       }
     },
+    "InputView" : {
+
+    },
     "Interactive chat" : {
       "localizations" : {
         "de" : {
