Toggle to enable/disable notification as sound and vibration on each chat message.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -36935,6 +36935,9 @@
         }
       }
     },
+    "Notification on message" : {
+
+    },
     "OBS" : {
       "localizations" : {
         "de" : {
