List of usernames to ignore in.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -57103,6 +57103,9 @@
         }
       }
     },
+    "Usernames to ignore" : {
+
+    },
     "Version" : {
       "localizations" : {
         "de" : {
