Fixes and watch emotes started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -38427,6 +38427,9 @@
         }
       }
     },
+    "No widgets found. Create widgets in Settings → Scenes → Widgets." : {
+
+    },
     "Noise level" : {
       "localizations" : {
         "de" : {
