Show personal hotsport URL for RTMP server streams.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -21789,7 +21789,11 @@
         }
       }
     },
+    "Enter one of the URLs into the RTMP publisher device to send video to this stream. Usually enter the WiFi or Personal Hotspot URL." : {
+
+    },
     "Enter one of the URLs into the RTMP publisher device to send video to this stream. Usually enter the WiFi URL." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
