Only show RTMP publish URLs when RTMP server is enabled.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -21081,6 +21081,9 @@
         }
       }
     },
+    "Enable the RTMP server to see URLs." : {
+
+    },
     "Enable to allow an assistant to monitor and control this device from a different device." : {
       "localizations" : {
         "de" : {
