--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -19633,7 +19633,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Отобразить"
+            "value" : "Экран"
           }
         },
         "sv" : {
