Open Streaming Platform chat continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -23511,6 +23511,7 @@
       }
     },
     "Example URL: ws://foo.org:5443/ws" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
