Start recording from watch app.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -33059,6 +33059,9 @@
         }
       }
     },
+    "Is recording" : {
+
+    },
     "jo304F4gr" : {
       "localizations" : {
         "de" : {
