--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -57372,6 +57372,9 @@
         }
       }
     },
+    "Text to speech" : {
+
+    },
     "The actual bitrate may be lower if the device does not support it." : {
       "localizations" : {
         "de" : {
