Text to speech settings.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -45735,6 +45735,9 @@
         }
       }
     },
+    "Rate" : {
+
+    },
     "RealtimeIRL" : {
       "localizations" : {
         "de" : {
@@ -65214,6 +65217,9 @@
           }
         }
       }
+    },
+    "Volume" : {
+
     },
     "Waiting for the remote control streamer to connect..." : {
       "localizations" : {
