Chat text to speech voice selection per language and country.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -2167,6 +2167,16 @@
         }
       }
     },
+    "%@ %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@"
+          }
+        }
+      }
+    },
     "%@ dB" : {
       "localizations" : {
         "de" : {
