--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -46424,7 +46424,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Inspelning"
+            "value" : "Spelar in"
           }
         },
         "tr" : {
