Chat text to speech subscribers only toggle (Twitch only for now).

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -55759,6 +55759,12 @@
         }
       }
     },
+    "Subscribers only" : {
+
+    },
+    "Subscribers only is only available for Twitch." : {
+
+    },
     "Summary and stream name" : {
       "localizations" : {
         "de" : {
